--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint": "^7.15.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0"
