--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^7.15.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "leaflet": "^1.7.1",
     "style-loader": "^2.0.0"
   }
 }
