--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@babel/core": "^7.12.10",
     "babel": "^6.23.0",
     "babel-loader": "^8.2.2",
+    "buffer": "^6.0.3",
     "css-loader": "^5.0.1",
     "eslint": "^7.15.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "json-loader": "^0.5.7",
     "leaflet": "^1.7.1",
-    "style-loader": "^2.0.0"
+    "style-loader": "^2.0.0",
+    "xml-js": "^1.6.11"
   }
 }
