--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "html-webpack-plugin": "^4.5.0",
     "json-loader": "^0.5.7",
     "leaflet": "^1.7.1",
+    "stream": "0.0.2",
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0",
     "xml-js": "^1.6.11"
